Poly Build tool crashes blender when deleting vertices #71053

Closed
opened 2019-10-23 22:37:29 +02:00 by Vas · 5 comments

System Information
Operating system: Windows-10-10.0.14393 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.86

Blender Version
Broken: version: 2.81 (sub 15), branch: master, commit date: 2019-10-22 15:34, hash: ac18c3c28d
Worked: (optional)

Short description of error
Blender crashes when poly build tool is used to delete vertices using shift left mouse
To be more precise, it happens when the segment of vertices goes from 3 to 2 ( as images show below)
image.png

Exact steps for others to reproduce the error

  • Default document
  • Colapse the cube into a single vertex
  • extrude that point two times so you have a L shaped line with three points
  • Use Poly build tool (shift+space > shift+3) to delete middle point using Shift + Left mouse click
  • Crash

untitled.blend

**System Information** Operating system: Windows-10-10.0.14393 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.86 **Blender Version** Broken: version: 2.81 (sub 15), branch: master, commit date: 2019-10-22 15:34, hash: `ac18c3c28d` Worked: (optional) **Short description of error** Blender crashes when poly build tool is used to delete vertices using shift left mouse To be more precise, it happens when the segment of vertices goes from 3 to 2 ( as images show below) ![image.png](https://archive.blender.org/developer/F7851171/image.png) **Exact steps for others to reproduce the error** - Default document - Colapse the cube into a single vertex - extrude that point two times so you have a L shaped line with three points - Use Poly build tool (shift+space > shift+3) to delete middle point using Shift + Left mouse click - Crash [untitled.blend](https://archive.blender.org/developer/F7851175/untitled.blend)
Author

Added subscriber: @Alumx

Added subscriber: @Alumx

Added subscriber: @gabe2252

Added subscriber: @gabe2252

Yep, I tried it and it crashed for me on ubuntu with 2.82 alpha build from today

Yep, I tried it and it crashed for me on ubuntu with 2.82 alpha build from today
Pablo Dobarro was assigned by Brecht Van Lommel 2019-10-25 05:23:01 +02:00

This issue was referenced by c6180c2249

This issue was referenced by c6180c2249e1864aefa244cecefb47a2f4fd508f
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71053
No description provided.