Fix T71053: Poly Build tool crashes blender when deleting wire vertices

Dissolve the vertex when it is wire instead of trying to collapse the
edge. When collapsing the edge, ##v_kill->e## was not NULL, so the
assert in ##bmesh_kernel_join_vert_kill_edge## fails.

Reviewed By: jbakker

Maniphest Tasks: T71053

Differential Revision: https://developer.blender.org/D6159